[package]
name = "cynetmapper-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cynetmapper-core = { path = "../crates/core" }
cynetmapper-gui = { path = "../crates/gui" }
cynetmapper-cli = { path = "../crates/cli" }
tokio = { version = "1.35", features = ["full"] }
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"