[package]
name = "cynetmapper-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core discovery engine for cyNetMapper"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Networking
socket2 = { workspace = true }
pnet = { workspace = true }
trust-dns-resolver = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
once_cell = { workspace = true }
rand = { workspace = true }
toml.workspace = true
serde_yaml.workspace = true

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }
windows = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[features]
default = ["host-discovery", "port-scanning", "service-detection"]
host-discovery = []
port-scanning = []
service-detection = []
os-fingerprinting = []
traceroute = []
raw-sockets = []
safe-mode = []

[lib]
name = "cynetmapper_core"
path = "src/lib.rs"
doctest = true

[[example]]
name = "basic_scan"
path = "examples/basic_scan.rs"
required-features = ["host-discovery", "port-scanning"]

[[bench]]
name = "discovery_bench"
harness = false
required-features = ["host-discovery", "port-scanning"]
