[package]
name = "cynetmapper-probes"
version = "0.1.0"
edition = "2021"
authors = ["cyNetMapper Team"]
description = "Network probing modules for cyNetMapper"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cynetmapper/cynetmapper"
keywords = ["network", "scanning", "security", "probes"]
categories = ["network-programming"]

[dependencies]
# Core dependencies
cynetmapper-core = { path = "../core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
rand = "0.8"
once_cell = "1.0"
lazy_static = "1.4"
regex = "1.0"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.27"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef"] }
windows = { version = "0.52", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["tcp-probes", "udp-probes"]

# Probe types
tcp-probes = []
udp-probes = []
icmp-probes = []
sctp-probes = []

# Advanced features
raw-sockets = []
os-fingerprinting = []
service-detection = []
banner-grabbing = []

# Platform features
unix-raw = ["raw-sockets"]
windows-raw = ["raw-sockets"]

[[example]]
name = "tcp_probe"
path = "examples/tcp_probe.rs"
required-features = ["tcp-probes"]

[[example]]
name = "service_detection"
path = "examples/service_detection.rs"
required-features = ["service-detection"]

[[bench]]
name = "probe_performance"
harness = false
required-features = ["tcp-probes", "udp-probes"]

[lib]
name = "cynetmapper_probes"
path = "src/lib.rs"